Fixed menu button visibility on phones

--- a/styles/navigation.css
+++ b/styles/navigation.css
@@ -24,22 +24,16 @@
 }
 .navigation__menu-button {
     display: none;
-}
-.navigation__button-lines {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
     width: 25px;
     height: 25px;
     padding: 0;
     background: none;
     border: none;
 }
-.navigation__button-line {
+.navigation__menu-icon {
     width: 100%;
-    height: 3px;
-    background: #FFF;
 }
+
 @media (max-width: 760px) {
     .navigation {
         width: 90vw;
